# omni

./: pyproject.toml  readme.md
src/omni/: __main__.py  settings.py
src/omni/core/: classifier.py  crawler.py
src/omni/io/: mailer.py
src/omni/jobs/: service.py
src/omni/tests/: test_crawler.py  test_gemini.py
src/omni/utils/: sources.json
